--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "DB ORM",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon -e html,js,css app.js"
   },
   "author": "",
   "license": "ISC",
