--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "nunjucks": "^3.0.0",
+    "path": "^0.12.7",
+    "pg": "^6.1.2",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^3.29.0",
     "volleyball": "^1.4.1"
   }
 }
